# NewsApp

./: .dockerignore  .env.example  .gitignore  BACK_BUTTON_FIX_VERIFICATION.md  Dockerfile  Dockerfile.test  LICENSE  MANUAL_TEST_BACK_BUTTON.md  README.md  docker-compose.test.yml  docker-compose.yml  newsapp  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  setup_and_test.sh  test_back_button_manual.py  verify_fix.py
.github/workflows/: AI-fix.yml
config/: config.template.yaml
docs/: CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  DOCKER_QUICK.txt  GIT_FIRST_COMMIT.md  README.md  REQUIREMENTS.md  SETTINGS_FEATURE.md  SETUP_COMPLETE.md  TESTING.md
lab/: fetch_feeds_demo.py
src/: __init__.py  main.py  models.py
src/api/: __init__.py
src/cache/: __init__.py
src/config/: __init__.py
src/ui/: __init__.py  detail.py  settings.py
tests/: README.md  __init__.py  conftest.py  manual_test.py  test_api.py  test_back_button_fix.py  test_back_button_integration.py  test_cache.py  test_config.py  test_integration.py  test_models.py  test_ui_settings.py
